--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 .customNavbar {
     padding-right: 10px;
+    padding-left: 10px;
 }
 
 .logoNav {
@@ -78,6 +79,7 @@ span {
 /* -------------------------------------- ITEM LIST CONTAINER */
 
 .bienvenido {
+    padding-left: 10px;
     padding-top: 10px;
     font-size: 50px;
     font-family: Arial, Helvetica, sans-serif;
