entrega final react v1.3

--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,12 @@
     display: inline;
 }
 
+/* -------------------------------------- BRIEF */
+
+.list-products-cart {
+    padding-left: 100px;
+}
+
 /* -------------------------------------- MEDIA QUERY */
 
 @media (min-width: 576px) {
